# solana_playground

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
app/: App.tsx  config.ts  create_token.ts  index.css  index.ts  main.tsx
app/components/: AccountState.tsx  BuyTicket.tsx  GetRandom.tsx  LotteryState.tsx  MintNFT.tsx  NFTState.tsx
programs/playground/: Cargo.toml
programs/playground/src/: lib.rs  state.rs
sdk/: Cargo.toml
tests/: playground.ts
